[FIX][UI] Improve color contrast in Tikinewt theme --- * [FIX][UI] Improve color contrast in Tikinewt theme
See merge request tikiwiki/tiki!5380

--- a/themes/tikinewt/scss/_tiki-selectors.scss
+++ b/themes/tikinewt/scss/_tiki-selectors.scss
@@ -140,7 +140,7 @@ h3.card-title {
 // Use theme colors for active state - inspired by Morph theme
 .btn:not(.btn-link) {
     color: #fff;
-    background-color: #6c839b;
+    background-color: #61778F; // #6c839b;
     border: none;
     transition: background-color 0.15s ease-in-out, border 0.15s ease-in-out, box-shadow 0.15s ease-in-out, color 0.15s ease-in-out;
 }
